FTL::OSRExit::convertToForward() shouldn't misuse Operands<>::operator[] https://bugs.webkit.org/show_bug.cgi?id=122336

Reviewed by Geoffrey Garen.

Changed code in change set r156900 to use the operand() accessor instead of operator[].

* ftl/FTLOSRExit.cpp:
(JSC::FTL::OSRExit::convertToForward):


Canonical link: https://commits.webkit.org/140383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156906 268f45cc-cd09-0410-ab3c-d52691b4dbfc